--- a/omod/src/main/resources/hl7messages.properties
+++ b/omod/src/main/resources/hl7messages.properties
@@ -1,118 +1,119 @@
-usage=hl7snd [options] -c <host>:<port> [<file>..]
-try=Try `hl7snd --help' for more information.
-description=\n\
+@MODULE_ID@.usage=hl7snd [options] -c <host>:<port> [<file>..]
+@MODULE_ID@.try=Try `hl7snd --help' for more information.
+@MODULE_ID@.description=\n\
 Reads HL7 V2 messages from specified files and send them to a HL7 Receiver \
 application listening on specified host and port using Minimal Lower Level \
 Protocol (MLLP). Specify '-' as <file> to read the message from standard \
 input\n\-\n\
 Options:
-example=-\n\
+@MODULE_ID@.example=-\n\
 Example: hl7snd -c localhost:2575 message.hl7\n\
 => Send HL7 V2 message message.hl7 to HL7 Receiver listening on local port 2575.
-connect=specify remote address and port of the HL7 Receiver.
-bind=specify local address used to connect to the remote application; pick up \
+@MODULE_ID@.connect=specify remote address and port of the HL7 Receiver.
+@MODULE_ID@.bind=specify local address used to connect to the remote application; pick up \
 any valid local address to bind the socket by default.
 
-title=Radiology Module
-manageOrders=Manage Radiology Orders
-manageReports=Manage Radiology Reports
-addOrder=Add Radiology Order
-configureDevices=Configure Devices
-imageViewer=Image Viewer
+@MODULE_ID@.title=Radiology Module
+@MODULE_ID@.manageOrders=Manage Radiology Orders
+@MODULE_ID@.manageReports=Manage Radiology Reports
+@MODULE_ID@.addOrder=Add Radiology Order
+@MODULE_ID@.configureDevices=Configure Devices
+@MODULE_ID@.imageViewer=Image Viewer
 
-searchOrder=Search Order
-startDate=Start Date
-endDate=End Date
-find=Find
-clearResults=Clear Results
-filterBy=Filter By
-completed=Completed
-pending=Pending
-show=Show
-entries=entries
-resultsFor=Results for
-viewing=Viewing
-of=of
-first=first
-last=last
-showHideColumns=Show/Hide Columns
-showHide=Show/Hide
-worklist=Worklist
+@MODULE_ID@.searchOrder=Search Order
+@MODULE_ID@.startDate=Start Date
+@MODULE_ID@.endDate=End Date
+@MODULE_ID@.find=Find
+@MODULE_ID@.clearResults=Clear Results
+@MODULE_ID@.filterBy=Filter By
+@MODULE_ID@.completed=Completed
+@MODULE_ID@.pending=Pending
+@MODULE_ID@.show=Show
+@MODULE_ID@.entries=entries
+@MODULE_ID@.resultsFor=Results for
+@MODULE_ID@.viewing=Viewing
+@MODULE_ID@.of=of
+@MODULE_ID@.first=first
+@MODULE_ID@.last=last
+@MODULE_ID@.showHideColumns=Show/Hide Columns
+@MODULE_ID@.showHide=Show/Hide
+@MODULE_ID@.worklist=Worklist
 
-patientId=Patient Id
-patientFullName=Patient Full Name
-referringPhysician=Referring Physician
-scheduler=Scheduler
-performingPhysician=Performing Physician
-readingPhysician=Reading Physician
-appoinmentTime=Appointment Time
-appoinmentDate=Appointment Date
-modality=Modality
-status=Status
-crossDate=Start date is more recent than end date!
+@MODULE_ID@.patientId=Patient Id
+@MODULE_ID@.patientFullName=Patient Full Name
+@MODULE_ID@.referringPhysician=Referring Physician
+@MODULE_ID@.scheduler=Scheduler
+@MODULE_ID@.performingPhysician=Performing Physician
+@MODULE_ID@.readingPhysician=Reading Physician
+@MODULE_ID@.appoinmentTime=Appointment Time
+@MODULE_ID@.appoinmentDate=Appointment Date
+@MODULE_ID@.modality=Modality
+@MODULE_ID@.status=Status
+@MODULE_ID@.crossDate=Start date is more recent than end date!
+@MODULE_ID@.mwlStatus=DCM4CHEE Modality Worklist Sync Status
 
-createOrder=Create Order
-patient=Patient
-notSpecified=Not Specified
-procedureRequested=Procedure Requested
+@MODULE_ID@.createOrder=Create Order
+@MODULE_ID@.patient=Patient
+@MODULE_ID@.notSpecified=Not Specified
+@MODULE_ID@.procedureRequested=Procedure Requested
 
-patientOverview=Patient Overview
-moreInfo=More Information
-comments=Comments
-preferredDate=Preferred Date
-bodyPart=Body Part
-priority=Priority
-routine=Routine
-urgent=Urgent/Stat
-contrast=Contrast
-withContrast=With Contrast
-withoutContrast=Without Contrast
+@MODULE_ID@.patientOverview=Patient Overview
+@MODULE_ID@.moreInfo=More Information
+@MODULE_ID@.comments=Comments
+@MODULE_ID@.preferredDate=Preferred Date
+@MODULE_ID@.bodyPart=Body Part
+@MODULE_ID@.priority=Priority
+@MODULE_ID@.routine=Routine
+@MODULE_ID@.urgent=Urgent/Stat
+@MODULE_ID@.contrast=Contrast
+@MODULE_ID@.withContrast=With Contrast
+@MODULE_ID@.withoutContrast=Without Contrast
 
-validation.patientIdNull=Enter a valid patient
-requiredField=Required Field
-noModResponse=The modality has not communicated with DICOM server
+@MODULE_ID@.validation.patientIdNull=Enter a valid patient
+@MODULE_ID@.requiredField=Required Field
+@MODULE_ID@.noModResponse=The modality has not communicated with DICOM server
 
-accordingModality=According to the modality response
-priority=Priority
-scheduledStatus=Scheduled status
-performedStatus=Performed status
-badInit=Module not initialized correctly
-goto=Please go to 
-init=Initialize
-previousObs=Previous Observations
-config=Configuration and initialization
-createTypeAndRoles=Create radiology order type and roles required by the module (Optional)
-successConfig=Successfully done!
-failConfig=Type and Roles have been Initialized by Module Startup. Check "Manage Roles" and "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
-minChars=Minimum 3 Chars 
-dummyUsers=Create dummy users (Optional)
-studyPerformed=Study already performed!
-studyResults=Study results
-xebraConfig=Xebra WADO Server initialization
-createAE=Create AE
-createSCP=Create SCP
-scheduled=Scheduled
-performed=Performed
-failWorklist=Order saved in OpenMRS but failed sending to dcm4chee. Check if dcm4chee server is up or check if the correct ip address for dcm4chee has been set.
+@MODULE_ID@.accordingModality=According to the modality response
+@MODULE_ID@.priority=Priority
+@MODULE_ID@.scheduledStatus=Scheduled status
+@MODULE_ID@.performedStatus=Performed status
+@MODULE_ID@.badInit=Module not initialized correctly
+@MODULE_ID@.goto=Please go to 
+@MODULE_ID@.init=Initialize
+@MODULE_ID@.previousObs=Previous Observations
+@MODULE_ID@.config=Configuration and initialization
+@MODULE_ID@.createTypeAndRoles=Create radiology order type and roles required by the module (Optional)
+@MODULE_ID@.successConfig=Successfully done!
+@MODULE_ID@.failConfig=Type and Roles have been Initialized by Module Startup. Check "Manage Roles" and "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
+@MODULE_ID@.minChars=Minimum 3 Chars 
+@MODULE_ID@.dummyUsers=Create dummy users (Optional)
+@MODULE_ID@.studyPerformed=Study already performed!
+@MODULE_ID@.studyResults=Study results
+@MODULE_ID@.xebraConfig=Xebra WADO Server initialization
+@MODULE_ID@.createAE=Create AE
+@MODULE_ID@.createSCP=Create SCP
+@MODULE_ID@.scheduled=Scheduled
+@MODULE_ID@.performed=Performed
+@MODULE_ID@.failWorklist=Order saved in OpenMRS but failed sending to dcm4chee. Check if dcm4chee server is up or check if the correct ip address for dcm4chee has been set.
 
 # Statuses
-SCHEDULED=SCHEDULED
-ARRIVED=ARRIVED
-READY=READY 
-STARTED=STARTED
-DEPARTED=DEPARTED
+@MODULE_ID@.SCHEDULED=SCHEDULED
+@MODULE_ID@.ARRIVED=ARRIVED
+@MODULE_ID@.READY=READY 
+@MODULE_ID@.STARTED=STARTED
+@MODULE_ID@.DEPARTED=DEPARTED
 
-IN_PROGRESS=IN PROGRESS
-DISCONTINUED=DISCONTINUED
-COMPLETED=COMPLETED
+@MODULE_ID@.IN_PROGRESS=IN PROGRESS
+@MODULE_ID@.DISCONTINUED=DISCONTINUED
+@MODULE_ID@.COMPLETED=COMPLETED
 
 # Priorities
-STAT=STAT
-HIGH=HIGH
-ROUTINE=ROUTINE
-MEDIUM=MEDIUM
-LOW=LOW
+@MODULE_ID@.STAT=STAT
+@MODULE_ID@.HIGH=HIGH
+@MODULE_ID@.ROUTINE=ROUTINE
+@MODULE_ID@.MEDIUM=MEDIUM
+@MODULE_ID@.LOW=LOW
 
-mwl=MWL entries in: 
-mpps=MPPS entries in: 
-storage=DICOM image objects in: 
+@MODULE_ID@.mwl=MWL entries in: 
+@MODULE_ID@.mpps=MPPS entries in: 
+@MODULE_ID@.storage=DICOM image objects in: 
