--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,175 +17,77 @@
             <dcm4cheVersion>3.2.0</dcm4cheVersion>
             <dcm4che2Version>2.0.23</dcm4che2Version>
         </properties>
-	<dependencies>
-		<!-- 
-		Add other dependencies from lib:
-		<dependency>
-			<groupId>org.other.library</groupId>
-			<artifactId>library-name</artifactId>
-		</dependency>
-		-->
-		
-		<dependency>
-			<groupId>org.openmrs.api</groupId>
-			<artifactId>openmrs-api</artifactId>
-			<type>jar</type>
-		 <exclusions>
-		  <exclusion>
-		   <artifactId>log4j</artifactId>
-		   <groupId>log4j</groupId>
-		  </exclusion>
-		  <exclusion>
-		   <artifactId>slf4j-log4j12</artifactId>
-		   <groupId>org.slf4j</groupId>
-		  </exclusion>
-		  <exclusion>
-		   <artifactId>slf4j-api</artifactId>
-		   <groupId>org.slf4j</groupId>
-		  </exclusion>
-		 </exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.openmrs.api</groupId>
-			<artifactId>openmrs-api</artifactId>
-			<type>test-jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.openmrs.web</groupId>
-			<artifactId>openmrs-web</artifactId>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.openmrs.web</groupId>
-			<artifactId>openmrs-web</artifactId>
-			<type>test-jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.openmrs.test</groupId>
-			<artifactId>openmrs-test</artifactId>
-			<type>pom</type>
-		 <exclusions>
-		  <exclusion>
-		   <artifactId>log4j</artifactId>
-		   <groupId>log4j</groupId>
-		  </exclusion>
-		  <exclusion>
-		   <artifactId>slf4j-api</artifactId>
-		   <groupId>org.slf4j</groupId>
-		  </exclusion>
-		 </exclusions>
-		</dependency>
-	<!-- <dependency>
-	  <groupId>dcm4che</groupId>
-	  <artifactId>dcm4che</artifactId>
-	  <version>${dcm4che2Version}</version>
-	  <type>pom</type>	  
-	 </dependency>-->
-	 <dependency>
-	  <groupId>dcm4che</groupId>
-	  <artifactId>dcm4che-net</artifactId>
-	  <version>${dcm4che2Version}</version>
-	  <exclusions>
-	   <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>
-	 </dependency>
-         <dependency>
-	  <groupId>dcm4che</groupId>
-	  <artifactId>dcm4che-core</artifactId>
-	  <version>${dcm4che2Version}</version>
-	  <exclusions>
-           <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>   
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>
-	 </dependency>
-	 <dependency>
-	  <groupId>dcm4che</groupId>
-	  <artifactId>dcm4che-filecache</artifactId>
-	  <version>${dcm4che2Version}</version>
-	  <exclusions>
-           <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>   
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>
-	 </dependency>
-	 <!--<dependency>
-	  <groupId>org.dcm4che.hl7</groupId>
-	  <artifactId>hl7snd</artifactId>
-	  <version>1.0</version>
-	  <type>jar</type>
-	 </dependency>                  -->
+	<dependencies>		
+                <dependency>
+                        <groupId>org.openmrs.api</groupId>
+                        <artifactId>openmrs-api</artifactId>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.openmrs.api</groupId>
+                        <artifactId>openmrs-api</artifactId>
+                        <type>test-jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.openmrs.web</groupId>
+                        <artifactId>openmrs-web</artifactId>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.openmrs.web</groupId>
+                        <artifactId>openmrs-web</artifactId>
+                        <type>test-jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.openmrs.test</groupId>
+                        <artifactId>openmrs-test</artifactId>
+                        <type>pom</type>
+                </dependency>
 
-         <dependency>
-	  <groupId>commons-cli</groupId>
-	  <artifactId>commons-cli</artifactId>
-	  <version>1.1</version>
-	  <type>jar</type>          
-	 </dependency>         
-	          
-         <dependency>
-          <groupId>org.dcm4che</groupId>
-          <artifactId>dcm4che-net</artifactId>
-          <version>${dcm4cheVersion}</version>
-          <exclusions>
-           <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>   
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>      
-        </dependency>
-        <dependency>
-          <groupId>org.dcm4che</groupId>
-          <artifactId>dcm4che-hl7</artifactId>
-          <version>${dcm4cheVersion}</version>
-          <exclusions>
-           <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>   
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>      
-        </dependency>
-        <dependency>
-          <groupId>org.dcm4che.tool</groupId>
-          <artifactId>dcm4che-tool-common</artifactId>
-          <version>${dcm4cheVersion}</version> 
-          <exclusions>
-           <exclusion>
-	    <artifactId>log4j</artifactId>
-	    <groupId>log4j</groupId>
-	   </exclusion>   
-	   <exclusion>
-	    <artifactId>slf4j-log4j12</artifactId>
-	    <groupId>org.slf4j</groupId>
-	   </exclusion>
-	  </exclusions>             
-        </dependency>
+               <!-- Dcm4chee toolkit depenndancies for dcmof, hl7snd and dcmrcv (never used) -->
+                <dependency>
+                        <groupId>dcm4che</groupId>
+                        <artifactId>dcm4che-net</artifactId>
+                        <version>${dcm4che2Version}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>dcm4che</groupId>
+                        <artifactId>dcm4che-core</artifactId>
+                        <version>${dcm4che2Version}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>dcm4che</groupId>
+                        <artifactId>dcm4che-filecache</artifactId>
+                        <version>${dcm4che2Version}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>commons-cli</groupId>
+                        <artifactId>commons-cli</artifactId>
+                        <version>1.1</version>
+                        <type>jar</type>          
+                </dependency>         
+
+                <dependency>
+                        <groupId>org.dcm4che</groupId>
+                        <artifactId>dcm4che-net</artifactId>
+                        <version>${dcm4cheVersion}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>org.dcm4che</groupId>
+                        <artifactId>dcm4che-hl7</artifactId>
+                        <version>${dcm4cheVersion}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>org.dcm4che.tool</groupId>
+                        <artifactId>dcm4che-tool-common</artifactId>
+                        <version>${dcm4cheVersion}</version> 
+                </dependency>
          
-	</dependencies>
+    </dependencies>
 
 </project>
