Added functionalities for Patient Dashboard

--- a/omod/src/main/resources/hl7messages.properties
+++ b/omod/src/main/resources/hl7messages.properties
@@ -55,6 +55,7 @@ any valid local address to bind the socket by default.
 @MODULE_ID@.notSpecified=Not Specified
 @MODULE_ID@.procedureRequested=Procedure Requested
 
+@MODULE_ID@.radiologyObservations=Radiology : Order Observations
 @MODULE_ID@.patientOverview=Patient Overview
 @MODULE_ID@.moreInfo=More Information
 @MODULE_ID@.comments=Comments
@@ -86,7 +87,7 @@ any valid local address to bind the socket by default.
 @MODULE_ID@.minChars=Minimum 3 Chars 
 @MODULE_ID@.dummyUsers=Create dummy users (Optional)
 @MODULE_ID@.studyPerformed=Study already performed!
-@MODULE_ID@.studyResults=Study results
+@MODULE_ID@.studyResults=Study Results
 @MODULE_ID@.xebraConfig=Xebra WADO Server initialization
 @MODULE_ID@.createAE=Create AE
 @MODULE_ID@.createSCP=Create SCP
