Bug fixes UI,Modality enum, internalization, jsp privileges
Error message for save order when dcm4chee is not online, Modality enum
changed to display full names of the dicom acronyms, internalization to
remove the hl7message bug that was coming up randomly. Included
privilege for radiology patient dashboard in config.xml. UI fixes for
orderdate/appointment date, check if order is completed before adding
observations.

--- a/omod/src/main/resources/hl7messages.properties
+++ b/omod/src/main/resources/hl7messages.properties
@@ -1,12 +1,11 @@
 usage=hl7snd [options] -c <host>:<port> [<file>..]
 try=Try `hl7snd --help' for more information.
-description=\n\
+description=
 Reads HL7 V2 messages from specified files and send them to a HL7 Receiver \
 application listening on specified host and port using Minimal Lower Level \
 Protocol (MLLP). Specify '-' as <file> to read the message from standard \
-input\n\-\n\
-Options:
-example=-\n\Example: hl7snd -c localhost:2575 message.hl7\n\=> Send HL7 V2 message message.hl7 to HL7 Receiver listening on local port 2575.
+input. Options:
+example=-Example: hl7snd -c localhost:2575 message.hl7=> Send HL7 V2 message message.hl7 to HL7 Receiver listening on local port 2575.
 connect=specify remote address and port of the HL7 Receiver.
 bind=specify local address used to connect to the remote application; pick up \
 any valid local address to bind the socket by default.
@@ -41,10 +40,10 @@ any valid local address to bind the socket by default.
 @MODULE_ID@.patientFullName=Patient Full Name
 @MODULE_ID@.referringPhysician=Referring Physician
 @MODULE_ID@.scheduler=Scheduler
-@MODULE_ID@.performingPhysician=Performing Physician
+@MODULE_ID@.performingPhysician=Performing Technician
 @MODULE_ID@.readingPhysician=Reading Physician
 @MODULE_ID@.appoinmentTime=Appointment Time
-@MODULE_ID@.appoinmentDate=Appointment Date
+@MODULE_ID@.appoinmentDate=Order Start Date
 @MODULE_ID@.modality=Modality
 @MODULE_ID@.status=Status
 @MODULE_ID@.crossDate=Start date is more recent than end date!
@@ -93,8 +92,8 @@ any valid local address to bind the socket by default.
 @MODULE_ID@.createSCP=Create SCP
 @MODULE_ID@.scheduled=Scheduled
 @MODULE_ID@.performed=Performed
-@MODULE_ID@.failWorklist=Order saved in OpenMRS but failed sending to dcm4chee. Check if dcm4chee server is up or check if the correct ip address for dcm4chee has been set.
-
+@MODULE_ID@.failWorklist= Failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
+@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
 # Statuses
 @MODULE_ID@.SCHEDULED=SCHEDULED
 @MODULE_ID@.ARRIVED=ARRIVED
