GCI-11: Add missing maven formatter plugin for OpenMRS modules
* specify project.build.sourceEncoding = UTF-8 in root pom to make
 build platform independent
* add .gitattributes so that git controls end-of-line normalization, text files
  will be normalized (line endings are converted to LF in the repository)
* add maven-java-formatter-plugin with OpenMRSFormatter.xml
 - use minimum version 0.3.1 otherwise plugin fails due to missing paths
   such as src/test/java in module api, for details see issue
   https://code.google.com/p/maven-java-formatter-plugin/issues/detail?id=15
 - exclude 3rd party source code (dcm4che tools) from being auto-formatted
   by the formatter plugin

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 				<type>pom</type>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.openmrs.tools</groupId>
+				<artifactId>openmrs-tools</artifactId>
+				<version>${openMRSVersion}</version>
+			</dependency>
                                                 
                         <!-- Added logging libraries at the parent project level so that its inherited by child modules. -->
                         <dependency>
@@ -77,6 +82,7 @@
 	</dependencyManagement>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<openMRSVersion>1.9.1</openMRSVersion>
 	</properties>
 
@@ -95,6 +101,32 @@
 					<groupId>org.openmrs.maven.plugins</groupId>
 					<artifactId>maven-openmrs-plugin</artifactId>
 					<version>1.0.1</version>
+				</plugin>
+				<plugin>
+					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+					<artifactId>maven-java-formatter-plugin</artifactId>
+					<version>0.3.1</version>
+					<configuration>
+						<compilerSource>${javaCompilerVersion}</compilerSource>
+						<compilerCompliance>${javaCompilerVersion}</compilerCompliance>
+						<compilerTargetPlatform>${javaCompilerVersion}</compilerTargetPlatform>
+						<configFile>eclipse/OpenMRSFormatter.xml</configFile>
+						<overrideConfigCompilerVersion>true</overrideConfigCompilerVersion>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.openmrs.tools</groupId>
+							<artifactId>openmrs-tools</artifactId>
+							<version>${openMRSVersion}</version>
+						</dependency>
+					</dependencies>
+					<executions>
+						<execution>
+							<goals>
+								<goal>format</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
