--- a/api/pom.xml
+++ b/api/pom.xml
@@ -89,5 +89,20 @@
                 </dependency>
          
     </dependencies>
-
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+					<artifactId>maven-java-formatter-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>**/dcm4che/**</exclude>
+							<exclude>**/dcm4che2/**</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
