move Radiology.hbm.xml from omod to api
* move Radiology.hbm.xml from omod/src/main/resources to api/src/main/resources
  (because the api is closer to the db model/definition, it seems to be a more
  appropriate place)
* more important BaseModuleContextSensitiveTest which will be added to the api need access to
  Radiology.hbm.xml otherwise they do not run
* add maven-dependency-plugin to copy Radiology.hbm.xml into the omod package
  (and thus the BaseModuleWebContextSensitiveTest added to it at a later stage)
* replace ${omodHbmConfig} in omods config.xml with a static reference to Radiology.hbm.xml
  since the omod plugin can only populate it for mappingFiles which are
  resources of the omod itself
* add resource api/src/main/resources to api pom

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -137,6 +137,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>Expand moduleApplicationContext and messages</id>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<phase>generate-resources</phase>
+						<configuration>
+							<includeGroupIds>${project.parent.groupId}</includeGroupIds>
+							<includeArtifactIds>${project.parent.artifactId}-api</includeArtifactIds>
+							<excludeTransitive>true</excludeTransitive>
+							<includes>**/*</includes>
+							<outputDirectory>${project.build.directory}/classes</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
