--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,6 +27,7 @@
                         <groupId>org.openmrs.api</groupId>
                         <artifactId>openmrs-api</artifactId>
                         <type>test-jar</type>
+                        <scope>test</scope>
                 </dependency>
                 <dependency>
                         <groupId>org.openmrs.web</groupId>
@@ -96,6 +97,12 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
