--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.openmrs.module</groupId>
@@ -12,84 +12,85 @@
 	<name>Radiology API</name>
 	<description>API project for Radiology</description>
 
-        <properties>
-            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-            <dcm4cheVersion>3.2.0</dcm4cheVersion>
-            <dcm4che2Version>2.0.23</dcm4che2Version>
-        </properties>
-	<dependencies>		
-                <dependency>
-                        <groupId>org.openmrs.api</groupId>
-                        <artifactId>openmrs-api</artifactId>
-                        <type>jar</type>
-                </dependency>
-                <dependency>
-                        <groupId>org.openmrs.api</groupId>
-                        <artifactId>openmrs-api</artifactId>
-                        <type>test-jar</type>
-                        <scope>test</scope>
-                </dependency>
-                <dependency>
-                        <groupId>org.openmrs.web</groupId>
-                        <artifactId>openmrs-web</artifactId>
-                        <type>jar</type>
-                </dependency>
-                <dependency>
-                        <groupId>org.openmrs.web</groupId>
-                        <artifactId>openmrs-web</artifactId>
-                        <type>test-jar</type>
-                </dependency>
-                <dependency>
-                        <groupId>org.openmrs.test</groupId>
-                        <artifactId>openmrs-test</artifactId>
-                        <type>pom</type>
-                </dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<dcm4cheVersion>3.2.0</dcm4cheVersion>
+		<dcm4che2Version>2.0.23</dcm4che2Version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.openmrs.api</groupId>
+			<artifactId>openmrs-api</artifactId>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.api</groupId>
+			<artifactId>openmrs-api</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.web</groupId>
+			<artifactId>openmrs-web</artifactId>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.web</groupId>
+			<artifactId>openmrs-web</artifactId>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.test</groupId>
+			<artifactId>openmrs-test</artifactId>
+			<type>pom</type>
+		</dependency>
 
-               <!-- Dcm4chee toolkit depenndancies for dcmof, hl7snd and dcmrcv (never used) -->
-                <dependency>
-                        <groupId>dcm4che</groupId>
-                        <artifactId>dcm4che-net</artifactId>
-                        <version>${dcm4che2Version}</version>
-                </dependency>
+		<!-- Dcm4chee toolkit depenndancies for dcmof, hl7snd and dcmrcv (never 
+			used) -->
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-net</artifactId>
+			<version>${dcm4che2Version}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>dcm4che</groupId>
-                        <artifactId>dcm4che-core</artifactId>
-                        <version>${dcm4che2Version}</version>
-                </dependency>
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-core</artifactId>
+			<version>${dcm4che2Version}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>dcm4che</groupId>
-                        <artifactId>dcm4che-filecache</artifactId>
-                        <version>${dcm4che2Version}</version>
-                </dependency>
+		<dependency>
+			<groupId>dcm4che</groupId>
+			<artifactId>dcm4che-filecache</artifactId>
+			<version>${dcm4che2Version}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>commons-cli</groupId>
-                        <artifactId>commons-cli</artifactId>
-                        <version>1.1</version>
-                        <type>jar</type>          
-                </dependency>         
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.1</version>
+			<type>jar</type>
+		</dependency>
 
-                <dependency>
-                        <groupId>org.dcm4che</groupId>
-                        <artifactId>dcm4che-net</artifactId>
-                        <version>${dcm4cheVersion}</version>
-                </dependency>
+		<dependency>
+			<groupId>org.dcm4che</groupId>
+			<artifactId>dcm4che-net</artifactId>
+			<version>${dcm4cheVersion}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>org.dcm4che</groupId>
-                        <artifactId>dcm4che-hl7</artifactId>
-                        <version>${dcm4cheVersion}</version>
-                </dependency>
+		<dependency>
+			<groupId>org.dcm4che</groupId>
+			<artifactId>dcm4che-hl7</artifactId>
+			<version>${dcm4cheVersion}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>org.dcm4che.tool</groupId>
-                        <artifactId>dcm4che-tool-common</artifactId>
-                        <version>${dcm4cheVersion}</version> 
-                </dependency>
-         
-    </dependencies>
+		<dependency>
+			<groupId>org.dcm4che.tool</groupId>
+			<artifactId>dcm4che-tool-common</artifactId>
+			<version>${dcm4cheVersion}</version>
+		</dependency>
+
+	</dependencies>
 	<build>
 		<resources>
 			<resource>
