--- a/pom.xml
+++ b/pom.xml
@@ -182,5 +182,19 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	
+	
+	<distributionManagement>
+		<repository>
+			<id>openmrs-repo-modules</id>
+			<name>Modules</name>
+			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules/</url>
+		</repository>
+        	<snapshotRepository>
+            		<id>openmrs-repo-snapshots</id>
+            		<name>OpenMRS Snapshots</name>
+            		<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
+        	</snapshotRepository>
+	</distributionManagement>
 
 </project>
