RAD-47 Run maven-java-formatter-plugin on build
* move formatter plugin config from element pluginManagement to plugins in omod and api
 (otherwise execution does not run)
* add execution element with goal format to trigger formatting on build in api and omod
* remove non-existing source files from omod formatter exceptions
* updated the readme

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -121,19 +121,24 @@
 				<filtering>true</filtering>
 			</testResource>
 		</testResources>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
-					<artifactId>maven-java-formatter-plugin</artifactId>
-					<configuration>
-						<excludes>
-							<exclude>**/dcm4che/**</exclude>
-							<exclude>**/dcm4che2/**</exclude>
-						</excludes>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+				<artifactId>maven-java-formatter-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/dcm4che/**</exclude>
+						<exclude>**/dcm4che2/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 </project>
