--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -145,21 +145,26 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
-					<artifactId>maven-java-formatter-plugin</artifactId>
-					<configuration>
-						<excludes>
-							<exclude>**/DicomObjectGet.java</exclude>
-							<exclude>**/RcvTest.java</exclude>
-							<exclude>**/Scratch.java</exclude>
-							<exclude>**/SCPPersist.java</exclude>
-						</excludes>
-					</configuration>
-				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<plugin>
+				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+				<artifactId>maven-java-formatter-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/DicomObjectGet.java</exclude>
+						<exclude>**/Scratch.java</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.openmrs.maven.plugins</groupId>
 				<artifactId>maven-openmrs-plugin</artifactId>
