RAD-60 Re-engineer installation of roles and privileges * add metadatadeploy-api dependency to api * add metadatasharing-api dependency to api * add RadiologyRolePrivilegeMetadata.java * delete system developer mode functionality * delete dummy user functionality

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -106,6 +106,16 @@
 			<artifactId>hamcrest-library</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>metadatadeploy-api</artifactId>
+			<version>${metadatadeployVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>metadatasharing-api</artifactId>
+			<version>${metadatasharingVersion}</version>
+		</dependency>
 
 	</dependencies>
 	<build>
