RAD-100 Upgrade core dependency to 1.11.4
* upgrade openmrs-core dependency to 1.11.4
* add dependency to hapi-structures-v231 for HL7 v2.3.1 messages
* remove hamcrest dependency since it is now in openmrs-core
* remove ProviderEditor since it is now in openmrs-core
* fix RadiologyServiceComponentTestDataset.xml
  - create person before patient
  - remove non radorder
  - add radorder encounters
* fix hl7 PIDTest
* change ObsEditorComponentTest to BaseModuleContextSensitiveTest
 to fix failure to connect to DB

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -76,15 +76,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<scope>test</scope>
+			<groupId>ca.uhn.hapi</groupId>
+			<artifactId>hapi-structures-v231</artifactId>
 		</dependency>
 
 	</dependencies>
