--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<openMRSVersion>1.10.2</openMRSVersion>
+		<openMRSVersion>1.11.4</openMRSVersion>
+		<hapiVersion>2.0</hapiVersion>
 	</properties>
 
 	<dependencyManagement>
@@ -92,17 +93,15 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-library</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
+				<groupId>ca.uhn.hapi</groupId>
+				<artifactId>hapi-structures-v231</artifactId>
+				<version>${hapiVersion}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>*</groupId>
+						<artifactId>*</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 
