RAD-122 Add test coverage via coveralls.io
* add jacoco dependency
* create jacoco.exec for api and omod on build
* add coveralls-maven-plugin dependency
* create jacoco report and send it to coveralls after
 build succeded on travis ci

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -112,6 +112,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/dcm4che/**</exclude>
+						<exclude>**/dcm4che2/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
