--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ matrix:
 branches:
   only:
     - master
+after_success:
+  - mvn jacoco:report coveralls:report
 notifications:
   email: false
 sudo: false
