RAD-125 Clean root and omod pom
* remove maven-java-formatter-plugin excludes in omod,
  since excluded files are already deleted from the repo
* reword comment in root pom about org.slf4j dependency

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 			</dependency>
 
 			<!-- Added logging libraries at the parent project level so that its inherited 
-				by child modules. -->
+				by child modules. Scope is 'provided' since they come with openmrs.war -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
