Filter for Concepts by ConceptClass

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -151,12 +151,6 @@
 			<plugin>
 				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
 				<artifactId>maven-java-formatter-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>**/DicomObjectGet.java</exclude>
-						<exclude>**/Scratch.java</exclude>
-					</excludes>
-				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -205,6 +199,15 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>org/openmrs/module/radiology/web/**</include>
+					</includes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
