--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 			</dependency>
 
 			<!-- Added logging libraries at the parent project level so that its inherited 
-				by child modules. -->
+				by child modules. Scope is 'provided' since they come with openmrs.war -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
@@ -146,6 +146,24 @@
 							<version>${openMRSVersion}</version>
 						</dependency>
 					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.7.5.201505241946</version>
+					<executions>
+						<execution>
+							<id>prepare-agent</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.0.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
