--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>reporting-api</artifactId>
-			<version>0.9.9-SNAPSHOT</version>
+			<version>0.9.9</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
