RAD-189 Update eclipse code formatter
* use revelc maven formatter which is an active fork of
original google formatter
* move formatter file closer in dir
* adapt eclipse formatter style
 * format javadoc <p>
 * format // and /**/
 * wrap enums each on a new line
 * wrap function calls so builder patterns are readable
 * set javadoc length to 125 like code
* format all files

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -96,9 +96,11 @@
 		</testResources>
 		<plugins>
 			<plugin>
-				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
-				<artifactId>maven-java-formatter-plugin</artifactId>
+				<groupId>net.revelc.code</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+				<version>${formatterPluginVersion}</version>
 				<configuration>
+					<configFile>${eclipseFormatterStyle}</configFile>
 					<excludes>
 						<exclude>**/dcm4che/**</exclude>
 						<exclude>**/dcm4che2/**</exclude>
