--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -117,6 +117,19 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
+										<groupId>net.revelc.code</groupId>
+										<artifactId>formatter-maven-plugin</artifactId>
+										<versionRange>[0.0,)</versionRange>
+										<goals>
+											<goal>format</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
 										<groupId>org.openmrs.maven.plugins</groupId>
 										<artifactId>maven-openmrs-plugin</artifactId>
 										<versionRange>[1.0.1,)</versionRange>
@@ -151,7 +164,6 @@
 			<plugin>
 				<groupId>net.revelc.code</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
-				<version>${formatterPluginVersion}</version>
 				<configuration>
 					<configFile>${eclipseFormatterStyle}</configFile>
 				</configuration>
