RAD-157 Add formatter for javascript files
our javascript files are a mess, they should follow a style guide as well and
be formatted automatically

* switch to maveninformatics formatter fork since his releases are up to date
and javascript formatting works
* move datatables in subfolder so they can be excluded from formatting via its
folder and tinymce is also in a subfolder
* format .js files only in omod and exclude third party files like datatables
and jquery
* remove <script> from .js files so they are formatted
* most js are already included with opnmrs:htmlinclude,
radiologyOrderList.js needs a little workaround because
it has spring message tags that need to be rendered by jsp compiler
* update readme
* run travis only against java7 since java 6 is not supported by formatter

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -74,7 +74,7 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>net.revelc.code</groupId>
+										<groupId>com.marvinformatics.formatter</groupId>
 										<artifactId>formatter-maven-plugin</artifactId>
 										<versionRange>[0.0,)</versionRange>
 										<goals>
@@ -93,10 +93,12 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>net.revelc.code</groupId>
+				<groupId>com.marvinformatics.formatter</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
 				<configuration>
-					<configFile>${eclipseFormatterStyle}</configFile>
+					<includes>
+						<include>**/*.java</include>
+					</includes>
 				</configuration>
 				<executions>
 					<execution>
