RAD-59 Update module to run on Platform 2.0
* upgrade openmrs dependency to 2.0-SNAPSHOT
* compile with java8
* add dependency in omod to legacyui since openmrs-core doesnt contain ui
anymore
* travis ci build only on java8
* update readme
* org.openmrs.util.HibernateEnumType was deleted, switch to hibernates enum type in mapping xml's
* add dependency on legacyui to omod
* dependencies of emrapi should have scope test
* remove "check_digit" from test dataset xml's
* fix RadiologyOrder.isDiscontinuationAllowed()
remove use of isActive in RadiologyOrder.isDiscontinuationAllowed, instead use
idDiscontinuedRightNow()

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -25,6 +25,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>legacyui-omod</artifactId>
+			<version>${openmrs-legacyui-version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
 			<type>jar</type>
@@ -53,7 +60,6 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
-
 	</dependencies>
 
 	<build>
