RAD-278 Test RadiologyReportEditor via unit test
* make RadiologyReportEditorComponentTest a unit test this is sufficient for
testing its logic and radiologyReportService can be mocked

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -262,6 +262,8 @@
 				<configuration>
 					<includes>
 						<include>org/openmrs/module/radiology/web/**</include>
+						<include>org/openmrs/module/radiology/order/web/**</include>
+						<include>org/openmrs/module/radiology/report/web/**</include>
 					</includes>
 				</configuration>
 			</plugin>
